# fsc

./: CMakeLists.txt  LICENSE  README.md
include/: argument_parser.hpp  command_executor.hpp  command_functions.hpp  command_list.hpp  command_structure.hpp  commands.hpp  utilities.hpp
source/: argument_parser.cpp  command_executor.cpp  command_functions.cpp  command_list.cpp  commands.cpp  main.cpp  utilities.cpp
